// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectors: signals engagement recency details should be empty with no results when not loading 1`] = `
Object {
  "details": Object {
    "data": Array [],
    "empty": true,
    "error": undefined,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals engagement recency details should select details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 25,
        "c_uneng": 0.2,
        "date": "2018-01-01",
      },
      Object {
        "c_14d": 0.2,
        "c_365d": 0.2,
        "c_new": 0.2,
        "c_total": 50,
        "c_uneng": 0.2,
        "date": "2018-01-02",
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals selectEngagementRecencyOverview returns all overview data 1`] = `
Object {
  "data": Array [
    Object {
      "current_c_14d": 10,
      "current_c_total": 50,
      "current_engaged_recipients": 10,
      "current_relative_engaged_recipients": 20,
      "history": Array [
        Object {
          "c_14d": 5,
          "c_365d": 5,
          "c_new": 5,
          "c_total": 25,
          "c_uneng": 5,
          "date": "2018-01-01",
          "engaged_recipients": 5,
          "relative_engaged_recipients": 20,
        },
        Object {
          "c_14d": 10,
          "c_365d": 10,
          "c_new": 10,
          "c_total": 50,
          "c_uneng": 10,
          "date": "2018-01-02",
          "engaged_recipients": 10,
          "relative_engaged_recipients": 20,
        },
      ],
      "sending_domain": "test.com",
      "total_engagement": 75,
    },
  ],
  "error": null,
  "loading": false,
  "metaData": Object {
    "currentMax": 10,
    "currentRelativeMax": 20,
    "max": 10,
    "relativeMax": 20,
  },
  "total_count": 10,
}
`;

exports[`Selectors: signals selectEngagementRecencyOverviewData returns data 1`] = `
Array [
  Object {
    "current_c_14d": 10,
    "current_c_total": 50,
    "current_engaged_recipients": 10,
    "current_relative_engaged_recipients": 20,
    "history": Array [
      Object {
        "c_14d": 5,
        "c_365d": 5,
        "c_new": 5,
        "c_total": 25,
        "c_uneng": 5,
        "date": "2018-01-01",
        "engaged_recipients": 5,
        "relative_engaged_recipients": 20,
      },
      Object {
        "c_14d": 10,
        "c_365d": 10,
        "c_new": 10,
        "c_total": 50,
        "c_uneng": 10,
        "date": "2018-01-02",
        "engaged_recipients": 10,
        "relative_engaged_recipients": 20,
      },
    ],
    "sending_domain": "test.com",
    "total_engagement": 75,
  },
]
`;

exports[`Selectors: signals selectSpamHitsOverview returns all overview data 1`] = `
Object {
  "data": Array [
    Object {
      "current_relative_trap_hits": 0.12,
      "current_trap_hits": 123,
      "history": Array [
        Object {
          "date": "2018-01-01",
          "injections": 182400,
          "ranking": "bad",
          "relative_trap_hits": 0.25,
          "trap_hits": 456,
        },
        Object {
          "date": "2018-01-02",
          "injections": 35000,
          "ranking": "good",
          "relative_trap_hits": 0.1,
          "trap_hits": 35,
        },
      ],
      "sending_domain": "test.com",
      "total_injections": 217400,
    },
    Object {
      "current_relative_trap_hits": null,
      "current_trap_hits": null,
      "history": Array [
        Object {
          "date": "2018-01-01",
          "injections": 282400,
          "ranking": "bad",
          "relative_trap_hits": 0.3,
          "trap_hits": 856,
        },
        Object {
          "date": "2018-01-02",
          "injections": 50000,
          "ranking": "good",
          "relative_trap_hits": 0.1,
          "trap_hits": 50,
        },
      ],
      "sending_domain": "null.test.com",
      "total_injections": 332400,
    },
  ],
  "error": null,
  "loading": false,
  "metaData": Object {
    "currentMax": 123,
    "currentRelativeMax": 0.12,
    "max": 856,
    "relativeMax": 0.3,
  },
  "total_count": 1,
}
`;

exports[`Selectors: signals selectSpamHitsOverviewData returns data 1`] = `
Array [
  Object {
    "current_relative_trap_hits": 0.12,
    "current_trap_hits": 123,
    "history": Array [
      Object {
        "date": "2018-01-01",
        "injections": 182400,
        "ranking": "bad",
        "relative_trap_hits": 0.25,
        "trap_hits": 456,
      },
      Object {
        "date": "2018-01-02",
        "injections": 35000,
        "ranking": "good",
        "relative_trap_hits": 0.1,
        "trap_hits": 35,
      },
    ],
    "sending_domain": "test.com",
    "total_injections": 217400,
  },
  Object {
    "current_relative_trap_hits": null,
    "current_trap_hits": null,
    "history": Array [
      Object {
        "date": "2018-01-01",
        "injections": 282400,
        "ranking": "bad",
        "relative_trap_hits": 0.3,
        "trap_hits": 856,
      },
      Object {
        "date": "2018-01-02",
        "injections": 50000,
        "ranking": "good",
        "relative_trap_hits": 0.1,
        "trap_hits": 50,
      },
    ],
    "sending_domain": "null.test.com",
    "total_injections": 332400,
  },
]
`;

exports[`Selectors: signals selected date should select date from react router 1`] = `"2018-02-01"`;

exports[`Selectors: signals spam hits details should be empty with no results when not loading 1`] = `
Object {
  "details": Object {
    "data": Array [],
    "empty": true,
    "error": undefined,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;

exports[`Selectors: signals spam hits details should select spam hits details 1`] = `
Object {
  "details": Object {
    "data": Array [
      Object {
        "date": "2018-01-01",
        "injections": 182400,
        "relative_trap_hits": 0.25,
        "trap_hits": 456,
      },
      Object {
        "date": "2018-01-02",
        "injections": 35000,
        "relative_trap_hits": 0.1,
        "trap_hits": 35,
      },
    ],
    "empty": false,
    "error": null,
    "loading": false,
  },
  "facet": "sending_domain",
  "facetId": "test.com",
  "subaccountId": "101",
}
`;
